html pretty and fix

--- a/index.html
+++ b/index.html
@@ -1,89 +1,139 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="author" content="The Booleaner">
-    <meta name="description" content="Internet Bene Pubblico">
-    <link rel="stylesheet" href="css/style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="author" content="The Booleaner" />
+    <meta name="description" content="Internet Bene Pubblico" />
+    <link rel="stylesheet" href="css/style.css" />
     <title>Booleaner</title>
-</head>
+  </head>
 
-<body>
-
-    <div class="container">
-        <header>
-            <figure>
-            <img src="img/logo.svg" alt="The Booleaner">
-            </figure>
-        </header>
+  <body>
+    <header>
+      <div>
+        <figure>
+          <img src="img/pattern.png" alt="Pattern" />
+          <img src="img/logo.svg" alt="The Booleaner" />
+        </figure>
+      </div>
+    </header>
     <main>
-        <h1>
-            Internet deve essere
-            al servizio del "bene pubblico":
-            il manifesto di Tim Berners-Lee"
-        </h1>
+      <h1>
+        Internet deve essere al servizio del "bene pubblico": il manifesto di
+        Tim Berners-Lee"
+      </h1>
 
-        <h2>
-            Scritto da 
-            <a href="index.html">The Booleaner</a>
-        </h2>
+      <h2>
+        Scritto da
+        <a href="index.html">The Booleaner</a>
+      </h2>
 
-        <h3>il 10/10/2020</h3>
+      <h3>il 10/10/2020</h3>
 
-        <div class="container">
-        <img src="img/tim-1.jpg" alt="Tim Berners-Lee">
-        <img src="img/tim-2.jpg" alt="Tim Berners-Lee">
-        <p>
-            1st Photo: John S. and
-            JAmes L. Knight Foundation,
-            by Scott Henrichsen
-        </p>
-        <p>
-            2nd Photo: Wikimedia, by Paul Clarke
-        </p>
+      <img src="img/tim-1.jpg" alt="Tim Berners-Lee" />
+      <img src="img/tim-2.jpg" alt="Tim Berners-Lee" />
+      <p>
+        1st Photo: John S. and JAmes L. Knight Foundation, by Scott Henrichsen
+      </p>
+      <p>2nd Photo: Wikimedia, by Paul Clarke</p>
 
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut tempora reprehenderit unde consequuntur accusamus alias amet nobis aperiam consequatur exercitationem ratione dolorem nihil maxime, numquam molestias rerum itaque dolore. Adipisci doloremque autem exercitationem, culpa quis eligendi similique nisi fugit voluptatibus praesentium perferendis cumque hic inventore, distinctio ducimus quaerat esse aliquam placeat ratione magnam aut eveniet iure. Autem iusto placeat modi.</p>
-        
-        <ul>
-            <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum, numquam!</li>
-            <li>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Numquam, impedit?</li>
-            <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat, inventore?</li>
-        </ul>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut tempora
+        reprehenderit unde consequuntur accusamus alias amet nobis aperiam
+        consequatur exercitationem ratione dolorem nihil maxime, numquam
+        molestias rerum itaque dolore. Adipisci doloremque autem exercitationem,
+        culpa quis eligendi similique nisi fugit voluptatibus praesentium
+        perferendis cumque hic inventore, distinctio ducimus quaerat esse
+        aliquam placeat ratione magnam aut eveniet iure. Autem iusto placeat
+        modi.
+      </p>
 
-        <table>
-            <thead>
-            <tr>
-                <th>Lorem ipsum dolor</th>
-                <th>Lorem ipsum dolor</th>
-                <th>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus, totam. Quae voluptatum dignissimos, sequi aut molestiae numquam accusamus, id voluptas, vitae vero modi iusto in. Beatae blanditiis nihil quasi eveniet facere natus. Odio perspiciatis sed quis? Dolore eligendi ea recusandae enim quam consequuntur commodi ducimus maiores pariatur eveniet id voluptas iste illum dolores laboriosam quos nihil totam, labore accusamus rem!</th>
-            </tr>
-            </thead>
-            <tbody>
-            <tr>
-                <th>Lorem ipsum dolor</th>
-                <th>Lorem ipsum dolor</th>
-                <th>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ut veritatis nihil cum, minus aspernatur dolor quas quidem autem, sed commodi repudiandae. Suscipit fugit dignissimos rem at ipsa repudiandae aspernatur voluptatibus earum. Aliquid nisi doloremque quos, laborum neque voluptates unde minus animi quisquam laudantium, officia quasi porro et optio consectetur sunt voluptas laboriosam. Aliquam quo, praesentium explicabo vel ipsam dignissimos nobis!</th>
-            </tr>
-            </tbody>
-            <tfoot>
-            <tr>
-                <th>Lorem ipsum dolor</th>
-                <th>Lorem ipsum dolor</th>
-                <th>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Odit dolore nam laboriosam earum ducimus assumenda. Odio dolore vitae perspiciatis rerum voluptatum earum, libero minima, voluptas corrupti vel velit repellat rem modi! Quod maiores earum commodi magnam illo consequuntur distinctio rerum porro ipsam consequatur? Error repellendus dicta quo officiis eum harum fugiat voluptatibus, excepturi quam id. Tempora ipsam quaerat asperiores ea.</th>
-            </tr>
-            </tfoot>
-        </table>
-    
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Illo voluptatum ab harum corrupti officia veniam suscipit fugit, adipisci blanditiis dolorem quae veritatis asperiores at distinctio consequuntur eos culpa vel commodi eius id voluptates, facilis ea. Tempore earum doloribus, dolores aspernatur quas eum recusandae dolorum eligendi laboriosam iure esse nobis magni ullam enim? Vitae soluta unde quibusdam, maxime omnis reprehenderit architecto!</p>
+      <ul>
+        <li>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum, numquam!
+        </li>
+        <li>
+          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Numquam,
+          impedit?
+        </li>
+        <li>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat,
+          inventore?
+        </li>
+      </ul>
 
+      <table>
+        <thead>
+          <tr>
+            <th>Lorem ipsum dolor</th>
+            <th>Lorem ipsum dolor</th>
+            <th>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus,
+              totam. Quae voluptatum dignissimos, sequi aut molestiae numquam
+              accusamus, id voluptas, vitae vero modi iusto in. Beatae
+              blanditiis nihil quasi eveniet facere natus. Odio perspiciatis sed
+              quis? Dolore eligendi ea recusandae enim quam consequuntur commodi
+              ducimus maiores pariatur eveniet id voluptas iste illum dolores
+              laboriosam quos nihil totam, labore accusamus rem!
+            </th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <th>Lorem ipsum dolor</th>
+            <th>Lorem ipsum dolor</th>
+            <th>
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ut
+              veritatis nihil cum, minus aspernatur dolor quas quidem autem, sed
+              commodi repudiandae. Suscipit fugit dignissimos rem at ipsa
+              repudiandae aspernatur voluptatibus earum. Aliquid nisi doloremque
+              quos, laborum neque voluptates unde minus animi quisquam
+              laudantium, officia quasi porro et optio consectetur sunt voluptas
+              laboriosam. Aliquam quo, praesentium explicabo vel ipsam
+              dignissimos nobis!
+            </th>
+          </tr>
+        </tbody>
+        <tfoot>
+          <tr>
+            <th>Lorem ipsum dolor</th>
+            <th>Lorem ipsum dolor</th>
+            <th>
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Odit
+              dolore nam laboriosam earum ducimus assumenda. Odio dolore vitae
+              perspiciatis rerum voluptatum earum, libero minima, voluptas
+              corrupti vel velit repellat rem modi! Quod maiores earum commodi
+              magnam illo consequuntur distinctio rerum porro ipsam consequatur?
+              Error repellendus dicta quo officiis eum harum fugiat
+              voluptatibus, excepturi quam id. Tempora ipsam quaerat asperiores
+              ea.
+            </th>
+          </tr>
+        </tfoot>
+      </table>
+
+      <p>
+        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Illo
+        voluptatum ab harum corrupti officia veniam suscipit fugit, adipisci
+        blanditiis dolorem quae veritatis asperiores at distinctio consequuntur
+        eos culpa vel commodi eius id voluptates, facilis ea. Tempore earum
+        doloribus, dolores aspernatur quas eum recusandae dolorum eligendi
+        laboriosam iure esse nobis magni ullam enim? Vitae soluta unde
+        quibusdam, maxime omnis reprehenderit architecto!
+      </p>
     </main>
     <footer>
-        <p><b>Potrebbero interessarti</b></p>
-        <img src="img/monitor.jpg" alt="Monitor">
-        <br>
-        <img src="img/graph.jpg" alt="Graph">
+      <p><b>Potrebbero interessarti</b></p>
+      <div>
+        <h3>Lorem ipsum dolor</h3>
+        <img src="img/monitor.jpg" alt="Monitor" />
+      </div>
+      <div>
+        <h3>Lorem ipsum dolor</h3>
+        <img src="img/graph.jpg" alt="Graph" />
+      </div>
     </footer>
-</body>
+  </body>
 </html>
