--- a/index.html
+++ b/index.html
@@ -12,16 +12,13 @@
 
   <body>
     <header>
-      <div>
-        <figure>
-          <img src="img/pattern.png" alt="Pattern" />
-          <img src="img/logo.svg" alt="The Booleaner" />
-        </figure>
+      <div class="top">
+          <img src="img/logo.svg" alt="The Booleaner" id="logo"/>
       </div>
     </header>
     <main>
       <h1>
-        Internet deve essere al servizio del "bene pubblico": il manifesto di
+        Internet deve essere al servizio del "bene pubblico": il<br> manifesto di
         Tim Berners-Lee"
       </h1>
 
@@ -63,28 +60,20 @@
           inventore?
         </li>
       </ul>
-
+    <section id="table">
       <table>
         <thead>
           <tr>
             <th>Lorem ipsum dolor</th>
             <th>Lorem ipsum dolor</th>
-            <th>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus,
-              totam. Quae voluptatum dignissimos, sequi aut molestiae numquam
-              accusamus, id voluptas, vitae vero modi iusto in. Beatae
-              blanditiis nihil quasi eveniet facere natus. Odio perspiciatis sed
-              quis? Dolore eligendi ea recusandae enim quam consequuntur commodi
-              ducimus maiores pariatur eveniet id voluptas iste illum dolores
-              laboriosam quos nihil totam, labore accusamus rem!
-            </th>
+            <th>Lorem ipsum dolor</th>
           </tr>
         </thead>
         <tbody>
           <tr>
-            <th>Lorem ipsum dolor</th>
-            <th>Lorem ipsum dolor</th>
-            <th>
+            <td>Lorem ipsum dolor</td>
+            <td>Lorem ipsum dolor</td>
+            <td>
               Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ut
               veritatis nihil cum, minus aspernatur dolor quas quidem autem, sed
               commodi repudiandae. Suscipit fugit dignissimos rem at ipsa
@@ -93,27 +82,39 @@
               laudantium, officia quasi porro et optio consectetur sunt voluptas
               laboriosam. Aliquam quo, praesentium explicabo vel ipsam
               dignissimos nobis!
-            </th>
+            </td>
+          </tr>
+          <tr>
+            <td>Lorem ipsum dolor</td>
+            <td>Lorem ipsum dolor</td>
+            <td>
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ut
+              veritatis nihil cum, minus aspernatur dolor quas quidem autem, sed
+              commodi repudiandae. Suscipit fugit dignissimos rem at ipsa
+              repudiandae aspernatur voluptatibus earum. Aliquid nisi doloremque
+              quos, laborum neque voluptates unde minus animi quisquam
+              laudantium, officia quasi porro et optio consectetur sunt voluptas
+              laboriosam. Aliquam quo, praesentium explicabo vel ipsam
+              dignissimos nobis!
+            </td>
+          </tr>
+          <tr>
+            <td>Lorem ipsum dolor</td>
+            <td>Lorem ipsum dolor</td>
+            <td>
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ut
+              veritatis nihil cum, minus aspernatur dolor quas quidem autem, sed
+              commodi repudiandae. Suscipit fugit dignissimos rem at ipsa
+              repudiandae aspernatur voluptatibus earum. Aliquid nisi doloremque
+              quos, laborum neque voluptates unde minus animi quisquam
+              laudantium, officia quasi porro et optio consectetur sunt voluptas
+              laboriosam. Aliquam quo, praesentium explicabo vel ipsam
+              dignissimos nobis!
+            </td>
           </tr>
         </tbody>
-        <tfoot>
-          <tr>
-            <th>Lorem ipsum dolor</th>
-            <th>Lorem ipsum dolor</th>
-            <th>
-              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Odit
-              dolore nam laboriosam earum ducimus assumenda. Odio dolore vitae
-              perspiciatis rerum voluptatum earum, libero minima, voluptas
-              corrupti vel velit repellat rem modi! Quod maiores earum commodi
-              magnam illo consequuntur distinctio rerum porro ipsam consequatur?
-              Error repellendus dicta quo officiis eum harum fugiat
-              voluptatibus, excepturi quam id. Tempora ipsam quaerat asperiores
-              ea.
-            </th>
-          </tr>
-        </tfoot>
       </table>
-
+    </section>
       <p>
         Lorem, ipsum dolor sit amet consectetur adipisicing elit. Illo
         voluptatum ab harum corrupti officia veniam suscipit fugit, adipisci
