--- a/index.html
+++ b/index.html
@@ -127,14 +127,14 @@
     </main>
     <footer>
       <p><b>Potrebbero interessarti</b></p>
-      <div>
-        <h3>Lorem ipsum dolor</h3>
+      <figure class="articolo1">
+        <figcaption>Lorem ipsum dolor</figcaption>
         <img src="img/monitor.jpg" alt="Monitor" />
-      </div>
-      <div>
-        <h3>Lorem ipsum dolor</h3>
+      </figure>
+      <figure class="articolo2">
+        <figcaption>Lorem ipsum dolor</figcaption>
         <img src="img/graph.jpg" alt="Graph" />
-      </div>
+      </figure>
     </footer>
   </body>
 </html>
