--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
   <body>
     <header>
       <div class="top">
-          <img src="img/logo.svg" alt="The Booleaner" id="logo"/>
+        <img src="img/logo.svg" alt="The Booleaner" id="logo" />
       </div>
     </header>
     <main>
       <h1>
-        Internet deve essere al servizio del "bene pubblico": il<br> manifesto di
-        Tim Berners-Lee"
+        Internet deve essere al servizio del "bene pubblico": il<br />
+        manifesto di Tim Berners-Lee"
       </h1>
 
       <h2>
@@ -60,61 +60,61 @@
           inventore?
         </li>
       </ul>
-    <section id="table">
-      <table>
-        <thead>
-          <tr>
-            <th>Lorem ipsum dolor</th>
-            <th>Lorem ipsum dolor</th>
-            <th>Lorem ipsum dolor</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr>
-            <td>Lorem ipsum dolor</td>
-            <td>Lorem ipsum dolor</td>
-            <td>
-              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ut
-              veritatis nihil cum, minus aspernatur dolor quas quidem autem, sed
-              commodi repudiandae. Suscipit fugit dignissimos rem at ipsa
-              repudiandae aspernatur voluptatibus earum. Aliquid nisi doloremque
-              quos, laborum neque voluptates unde minus animi quisquam
-              laudantium, officia quasi porro et optio consectetur sunt voluptas
-              laboriosam. Aliquam quo, praesentium explicabo vel ipsam
-              dignissimos nobis!
-            </td>
-          </tr>
-          <tr>
-            <td>Lorem ipsum dolor</td>
-            <td>Lorem ipsum dolor</td>
-            <td>
-              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ut
-              veritatis nihil cum, minus aspernatur dolor quas quidem autem, sed
-              commodi repudiandae. Suscipit fugit dignissimos rem at ipsa
-              repudiandae aspernatur voluptatibus earum. Aliquid nisi doloremque
-              quos, laborum neque voluptates unde minus animi quisquam
-              laudantium, officia quasi porro et optio consectetur sunt voluptas
-              laboriosam. Aliquam quo, praesentium explicabo vel ipsam
-              dignissimos nobis!
-            </td>
-          </tr>
-          <tr>
-            <td>Lorem ipsum dolor</td>
-            <td>Lorem ipsum dolor</td>
-            <td>
-              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ut
-              veritatis nihil cum, minus aspernatur dolor quas quidem autem, sed
-              commodi repudiandae. Suscipit fugit dignissimos rem at ipsa
-              repudiandae aspernatur voluptatibus earum. Aliquid nisi doloremque
-              quos, laborum neque voluptates unde minus animi quisquam
-              laudantium, officia quasi porro et optio consectetur sunt voluptas
-              laboriosam. Aliquam quo, praesentium explicabo vel ipsam
-              dignissimos nobis!
-            </td>
-          </tr>
-        </tbody>
-      </table>
-    </section>
+      <section id="table">
+        <table>
+          <thead>
+            <tr>
+              <th>Lorem ipsum dolor</th>
+              <th>Lorem ipsum dolor</th>
+              <th>Lorem ipsum dolor</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>Lorem ipsum dolor</td>
+              <td>Lorem ipsum dolor</td>
+              <td>
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ut
+                veritatis nihil cum, minus aspernatur dolor quas quidem autem,
+                sed commodi repudiandae. Suscipit fugit dignissimos rem at ipsa
+                repudiandae aspernatur voluptatibus earum. Aliquid nisi
+                doloremque quos, laborum neque voluptates unde minus animi
+                quisquam laudantium, officia quasi porro et optio consectetur
+                sunt voluptas laboriosam. Aliquam quo, praesentium explicabo vel
+                ipsam dignissimos nobis!
+              </td>
+            </tr>
+            <tr>
+              <td>Lorem ipsum dolor</td>
+              <td>Lorem ipsum dolor</td>
+              <td>
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ut
+                veritatis nihil cum, minus aspernatur dolor quas quidem autem,
+                sed commodi repudiandae. Suscipit fugit dignissimos rem at ipsa
+                repudiandae aspernatur voluptatibus earum. Aliquid nisi
+                doloremque quos, laborum neque voluptates unde minus animi
+                quisquam laudantium, officia quasi porro et optio consectetur
+                sunt voluptas laboriosam. Aliquam quo, praesentium explicabo vel
+                ipsam dignissimos nobis!
+              </td>
+            </tr>
+            <tr>
+              <td>Lorem ipsum dolor</td>
+              <td>Lorem ipsum dolor</td>
+              <td>
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ut
+                veritatis nihil cum, minus aspernatur dolor quas quidem autem,
+                sed commodi repudiandae. Suscipit fugit dignissimos rem at ipsa
+                repudiandae aspernatur voluptatibus earum. Aliquid nisi
+                doloremque quos, laborum neque voluptates unde minus animi
+                quisquam laudantium, officia quasi porro et optio consectetur
+                sunt voluptas laboriosam. Aliquam quo, praesentium explicabo vel
+                ipsam dignissimos nobis!
+              </td>
+            </tr>
+          </tbody>
+        </table>
+      </section>
       <p>
         Lorem, ipsum dolor sit amet consectetur adipisicing elit. Illo
         voluptatum ab harum corrupti officia veniam suscipit fugit, adipisci
