--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </header>
     <main>
       <h1>
-        Internet deve essere al servizio del "bene pubblico": il<br />
+        Internet deve essere al servizio del "bene pubblico": il
         manifesto di Tim Berners-Lee"
       </h1>
 
