--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
 
       <p>
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut tempora
-        reprehenderit unde consequuntur accusamus alias amet nobis aperiam
-        consequatur exercitationem ratione dolorem nihil maxime, numquam
+        reprehenderit <span>unde consequuntur accusamus alias amet nobis aperiam
+        consequatur exercitationem </span>ratione dolorem nihil maxime, numquam
         molestias rerum itaque dolore. Adipisci doloremque autem exercitationem,
         culpa quis eligendi similique nisi fugit voluptatibus praesentium
         perferendis cumque hic inventore, distinctio ducimus quaerat esse
@@ -117,8 +117,8 @@
       </section>
       <p>
         Lorem, ipsum dolor sit amet consectetur adipisicing elit. Illo
-        voluptatum ab harum corrupti officia veniam suscipit fugit, adipisci
-        blanditiis dolorem quae veritatis asperiores at distinctio consequuntur
+        voluptatum <span>ab harum corrupti officia veniam suscipit fugit, adipisci
+        blanditiis dolorem quae </span>veritatis asperiores at distinctio consequuntur
         eos culpa vel commodi eius id voluptates, facilis ea. Tempore earum
         doloribus, dolores aspernatur quas eum recusandae dolorum eligendi
         laboriosam iure esse nobis magni ullam enim? Vitae soluta unde
