--- a/index.html
+++ b/index.html
@@ -126,15 +126,15 @@
       </p>
     </main>
     <footer>
-      <p><b>Potrebbero interessarti</b></p>
-      <figure class="articolo1">
+      <h3>Potrebbero interessarti</h3>
+    <figure class="articolo1">
         <figcaption>Lorem ipsum dolor</figcaption>
         <img src="img/monitor.jpg" alt="Monitor" />
-      </figure>
-      <figure class="articolo2">
+    </figure>
+    <figure class="articolo2">
         <figcaption>Lorem ipsum dolor</figcaption>
         <img src="img/graph.jpg" alt="Graph" />
-      </figure>
+    </figure>
     </footer>
   </body>
 </html>
