remove unneeded paragraph

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="css/style.css" />
     <title>Booleaner</title>
   </head>
-  
+
   <body>
     <header>
       <div class="top">
@@ -32,9 +32,8 @@
       <img src="img/tim-1.jpg" alt="Tim Berners-Lee" />
       <img src="img/tim-2.jpg" alt="Tim Berners-Lee" />
       <p>
-        1st Photo: John S. and JAmes L. Knight Foundation, by Scott Henrichsen
-      </p>
-      <p>2nd Photo: Wikimedia, by Paul Clarke</p>
+        1st Photo: John S. and JAmes L. Knight Foundation, by Scott Henrichsen<br>
+        2nd Photo: Wikimedia, by Paul Clarke</p>
 
       <p>
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut tempora
