added text colors

--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <meta name="author" content="The Booleaner" />
     <meta name="description" content="Internet Bene Pubblico" />
     <link rel="stylesheet" href="css/style.css" />
+    <link
+      rel="icon"
+      href="https://coursereport-production.imgix.net/uploads/school/logo/681/original/Pittogramma-RGB-1080-BLUE-circle.png"
+      type="image/png"/>
     <title>Booleaner</title>
   </head>
 
@@ -16,34 +20,39 @@
         <img src="img/logo.svg" alt="The Booleaner" id="logo" />
       </div>
     </header>
-    <main>
+    <main class="container">
       <h1>
-        Internet deve essere al servizio del "bene pubblico": il
-        manifesto di Tim Berners-Lee"
+        Internet deve essere al servizio del "bene pubblico": il manifesto di
+        Tim Berners-Lee"
       </h1>
 
-      <h2>
+      <address>
         Scritto da
-        <a href="index.html">The Booleaner</a>
-      </h2>
+        <span clss="text-lightblue">The Booleaner</span>
+      </address>
 
-      <h3>il 10/10/2020</h3>
-
-      <img src="img/tim-1.jpg" alt="Tim Berners-Lee" />
-      <img src="img/tim-2.jpg" alt="Tim Berners-Lee" />
-      <p>
-        1st Photo: John S. and JAmes L. Knight Foundation, by Scott Henrichsen<br>
-        2nd Photo: Wikimedia, by Paul Clarke</p>
-
+      <time>il 10/10/2020</time>
+      <figure>
+        <img src="img/tim-1.jpg" alt="Tim Berners-Lee" />
+        <img src="img/tim-2.jpg" alt="Tim Berners-Lee" />
+        <figcaption>
+          1st Photo: John S. and JAmes L. Knight Foundation, by Scott
+          Henrichsen<br />
+          2nd Photo: Wikimedia, by Paul Clarke
+        </figcaption>
+      </figure>
       <p>
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut tempora
-        reprehenderit <span>unde consequuntur accusamus alias amet nobis aperiam
-        consequatur exercitationem </span>ratione dolorem nihil maxime, numquam
-        molestias rerum itaque dolore. Adipisci doloremque autem exercitationem,
-        culpa quis eligendi similique nisi fugit voluptatibus praesentium
-        perferendis cumque hic inventore, distinctio ducimus quaerat esse
-        aliquam placeat ratione magnam aut eveniet iure. Autem iusto placeat
-        modi.
+        reprehenderit
+        <span class="text-yellow">
+          unde consequuntur accusamus alias amet nobis aperiam consequatur
+          exercitationem
+        </span>
+        ratione dolorem nihil maxime, numquam molestias rerum itaque dolore.
+        Adipisci doloremque autem exercitationem, culpa quis eligendi similique
+        nisi fugit voluptatibus praesentium perferendis cumque hic inventore,
+        distinctio ducimus quaerat esse aliquam placeat ratione magnam aut
+        eveniet iure. Autem iusto placeat modi.
       </p>
 
       <ul>
@@ -116,24 +125,28 @@
       </section>
       <p>
         Lorem, ipsum dolor sit amet consectetur adipisicing elit. Illo
-        voluptatum <span>ab harum corrupti officia veniam suscipit fugit, adipisci
-        blanditiis dolorem quae </span>veritatis asperiores at distinctio consequuntur
-        eos culpa vel commodi eius id voluptates, facilis ea. Tempore earum
-        doloribus, dolores aspernatur quas eum recusandae dolorum eligendi
-        laboriosam iure esse nobis magni ullam enim? Vitae soluta unde
-        quibusdam, maxime omnis reprehenderit architecto!
+        voluptatum
+        <span class="text-yellow">
+          ab harum corrupti officia veniam suscipit fugit, adipisci blanditiis
+          dolorem quae
+        </span>
+        veritatis asperiores at distinctio consequuntur eos culpa vel commodi
+        eius id voluptates, facilis ea. Tempore earum doloribus, dolores
+        aspernatur quas eum recusandae dolorum eligendi laboriosam iure esse
+        nobis magni ullam enim? Vitae soluta unde quibusdam, maxime omnis
+        reprehenderit architecto!
       </p>
     </main>
     <footer>
       <h3>Potrebbero interessarti</h3>
-    <figure class="articolo1">
-        <figcaption>Lorem ipsum dolor</figcaption>
+      <figure class="articolo1">
+        <figcaption class="text-white">Lorem ipsum dolor</figcaption>
         <img src="img/monitor.jpg" alt="Monitor" />
-    </figure>
-    <figure class="articolo2">
-        <figcaption>Lorem ipsum dolor</figcaption>
+      </figure>
+      <figure class="articolo2">
+        <figcaption class="text-white">Lorem ipsum dolor</figcaption>
         <img src="img/graph.jpg" alt="Graph" />
-    </figure>
+      </figure>
     </footer>
   </body>
 </html>
