--- a/index.html
+++ b/index.html
@@ -74,11 +74,11 @@
             <tr>
               <th>Lorem ipsum dolor</th>
               <th>Lorem ipsum dolor</th>
-              <th>Lorem ipsum dolor</th>
+              <th class="w-50">Lorem ipsum dolor</th>
             </tr>
           </thead>
           <tbody>
-            <tr>
+            <tr class="row">
               <td>Lorem ipsum dolor</td>
               <td>Lorem ipsum dolor</td>
               <td>
@@ -106,7 +106,7 @@
                 ipsam dignissimos nobis!
               </td>
             </tr>
-            <tr>
+            <tr class="row">
               <td>Lorem ipsum dolor</td>
               <td>Lorem ipsum dolor</td>
               <td>
@@ -139,14 +139,14 @@
     </main>
     <footer>
       <h3>Potrebbero interessarti</h3>
-      <figure class="articolo1">
-        <figcaption class="text-white">Lorem ipsum dolor</figcaption>
+      <div class="articolo1">
+        <h3 class="text-white">Lorem ipsum dolor</h3>
         <img src="img/monitor.jpg" alt="Monitor" />
-      </figure>
-      <figure class="articolo2">
-        <figcaption class="text-white">Lorem ipsum dolor</figcaption>
+      </div>
+      <div class="articolo2">
+        <h3 class="text-white">Lorem ipsum dolor</h3>
         <img src="img/graph.jpg" alt="Graph" />
-      </figure>
+      </div>
     </footer>
   </body>
 </html>
