comment and spacing

--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     <link
       rel="icon"
       href="https://coursereport-production.imgix.net/uploads/school/logo/681/original/Pittogramma-RGB-1080-BLUE-circle.png"
-      type="image/png"/>
+      type="image/png"
+    />
     <title>Booleaner</title>
   </head>
 
@@ -25,13 +26,14 @@
         Internet deve essere al servizio del "bene pubblico": il manifesto di
         Tim Berners-Lee"
       </h1>
-
       <address>
         Scritto da
         <span clss="text-lightblue">The Booleaner</span>
       </address>
-
       <time>il 10/10/2020</time>
+
+      <!-- images -->
+
       <figure>
         <img src="img/tim-1.jpg" alt="Tim Berners-Lee" />
         <img src="img/tim-2.jpg" alt="Tim Berners-Lee" />
@@ -41,6 +43,9 @@
           2nd Photo: Wikimedia, by Paul Clarke
         </figcaption>
       </figure>
+
+      <!-- text -->
+      
       <p>
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut tempora
         reprehenderit
@@ -55,6 +60,8 @@
         eveniet iure. Autem iusto placeat modi.
       </p>
 
+      <!-- list -->
+
       <ul>
         <li>
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum, numquam!
@@ -68,6 +75,9 @@
           inventore?
         </li>
       </ul>
+
+      <!-- table -->
+
       <section id="table">
         <table>
           <thead>
@@ -122,6 +132,9 @@
             </tr>
           </tbody>
         </table>
+
+        <!-- text under table -->
+
       </section>
       <p>
         Lorem, ipsum dolor sit amet consectetur adipisicing elit. Illo
@@ -137,6 +150,9 @@
         reprehenderit architecto!
       </p>
     </main>
+
+    <!-- related articles -->
+
     <footer>
       <h3>Potrebbero interessarti</h3>
       <div class="articolo1">
