--- a/index.html
+++ b/index.html
@@ -14,141 +14,148 @@
     />
     <title>Booleaner</title>
   </head>
-
   <body>
+
+    <!-- header -->
+
     <header>
       <div class="top">
         <img src="img/logo.svg" alt="The Booleaner" id="logo" />
       </div>
     </header>
-    <main class="container">
-      <h1>
-        Internet deve essere al servizio del "bene pubblico": il manifesto di
-        Tim Berners-Lee"
-      </h1>
-      <address>
-        Scritto da
-        <span clss="text-lightblue">The Booleaner</span>
-      </address>
-      <time>il 10/10/2020</time>
 
-      <!-- images -->
+    <!-- titolo -->
+  <article class="container">
+    <main >
+      
+        <h1>
+          Internet deve essere al servizio del "bene pubblico": il manifesto di
+          Tim Berners-Lee"
+        </h1>
+        <address class="text-gray">
+          Scritto da
+          <span class="text-lightblue">The Booleaner</span>
+        </address>
+        <time class="text-gray">il 10/10/2020</time>
 
-      <figure>
+        <!-- images -->
+
+        <figure>
         <img src="img/tim-1.jpg" alt="Tim Berners-Lee" />
         <img src="img/tim-2.jpg" alt="Tim Berners-Lee" />
-        <figcaption>
-          1st Photo: John S. and JAmes L. Knight Foundation, by Scott
-          Henrichsen<br />
-          2nd Photo: Wikimedia, by Paul Clarke
-        </figcaption>
-      </figure>
+          <figcaption>
+            1st Photo: John S. and JAmes L. Knight Foundation, by Scott
+            Henrichsen<br />
+            2nd Photo: Wikimedia, by Paul Clarke
+          </figcaption>
+        </figure>
 
-      <!-- text -->
+        <!-- text -->
+
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut tempora
+          reprehenderit
+          <span class="text-yellow">
+            unde consequuntur accusamus alias amet nobis aperiam consequatur
+            exercitationem
+          </span>
+          ratione dolorem nihil maxime, numquam molestias rerum itaque dolore.
+          Adipisci doloremque autem exercitationem, culpa quis eligendi
+          similique nisi fugit voluptatibus praesentium perferendis cumque hic
+          inventore, distinctio ducimus quaerat esse aliquam placeat ratione
+          magnam aut eveniet iure. Autem iusto placeat modi.
+        </p>
+
+        <!-- list -->
+
+        <ul>
+          <li>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum,
+            numquam!
+          </li>
+          <li>
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Numquam,
+            impedit?
+          </li>
+          <li>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat,
+            inventore?
+          </li>
+        </ul>
+
+        <!-- table -->
+
+        <section id="table">
+          <table>
+            <thead>
+              <tr>
+                <th>Lorem ipsum dolor</th>
+                <th>Lorem ipsum dolor</th>
+                <th class="w-50">Lorem ipsum dolor</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr class="row">
+                <td>Lorem ipsum dolor</td>
+                <td>Lorem ipsum dolor</td>
+                <td>
+                  Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ut
+                  veritatis nihil cum, minus aspernatur dolor quas quidem autem,
+                  sed commodi repudiandae. Suscipit fugit dignissimos rem at
+                  ipsa repudiandae aspernatur voluptatibus earum. Aliquid nisi
+                  doloremque quos, laborum neque voluptates unde minus animi
+                  quisquam laudantium, officia quasi porro et optio consectetur
+                  sunt voluptas laboriosam. Aliquam quo, praesentium explicabo
+                  vel ipsam dignissimos nobis!
+                </td>
+              </tr>
+              <tr>
+                <td>Lorem ipsum dolor</td>
+                <td>Lorem ipsum dolor</td>
+                <td>
+                  Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ut
+                  veritatis nihil cum, minus aspernatur dolor quas quidem autem,
+                  sed commodi repudiandae. Suscipit fugit dignissimos rem at
+                  ipsa repudiandae aspernatur voluptatibus earum. Aliquid nisi
+                  doloremque quos, laborum neque voluptates unde minus animi
+                  quisquam laudantium, officia quasi porro et optio consectetur
+                  sunt voluptas laboriosam. Aliquam quo, praesentium explicabo
+                  vel ipsam dignissimos nobis!
+                </td>
+              </tr>
+              <tr class="row">
+                <td>Lorem ipsum dolor</td>
+                <td>Lorem ipsum dolor</td>
+                <td>
+                  Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ut
+                  veritatis nihil cum, minus aspernatur dolor quas quidem autem,
+                  sed commodi repudiandae. Suscipit fugit dignissimos rem at
+                  ipsa repudiandae aspernatur voluptatibus earum. Aliquid nisi
+                  doloremque quos, laborum neque voluptates unde minus animi
+                  quisquam laudantium, officia quasi porro et optio consectetur
+                  sunt voluptas laboriosam. Aliquam quo, praesentium explicabo
+                  vel ipsam dignissimos nobis!
+                </td>
+              </tr>
+            </tbody>
+          </table>
+
+          <!-- text under table -->
+        </section>
+        <p>
+          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Illo
+          voluptatum
+          <span class="text-yellow">
+            ab harum corrupti officia veniam suscipit fugit, adipisci blanditiis
+            dolorem quae
+          </span>
+          veritatis asperiores at distinctio consequuntur eos culpa vel commodi
+          eius id voluptates, facilis ea. Tempore earum doloribus, dolores
+          aspernatur quas eum recusandae dolorum eligendi laboriosam iure esse
+          nobis magni ullam enim? Vitae soluta unde quibusdam, maxime omnis
+          reprehenderit architecto!
+        </p>
       
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut tempora
-        reprehenderit
-        <span class="text-yellow">
-          unde consequuntur accusamus alias amet nobis aperiam consequatur
-          exercitationem
-        </span>
-        ratione dolorem nihil maxime, numquam molestias rerum itaque dolore.
-        Adipisci doloremque autem exercitationem, culpa quis eligendi similique
-        nisi fugit voluptatibus praesentium perferendis cumque hic inventore,
-        distinctio ducimus quaerat esse aliquam placeat ratione magnam aut
-        eveniet iure. Autem iusto placeat modi.
-      </p>
-
-      <!-- list -->
-
-      <ul>
-        <li>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum, numquam!
-        </li>
-        <li>
-          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Numquam,
-          impedit?
-        </li>
-        <li>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat,
-          inventore?
-        </li>
-      </ul>
-
-      <!-- table -->
-
-      <section id="table">
-        <table>
-          <thead>
-            <tr>
-              <th>Lorem ipsum dolor</th>
-              <th>Lorem ipsum dolor</th>
-              <th class="w-50">Lorem ipsum dolor</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr class="row">
-              <td>Lorem ipsum dolor</td>
-              <td>Lorem ipsum dolor</td>
-              <td>
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ut
-                veritatis nihil cum, minus aspernatur dolor quas quidem autem,
-                sed commodi repudiandae. Suscipit fugit dignissimos rem at ipsa
-                repudiandae aspernatur voluptatibus earum. Aliquid nisi
-                doloremque quos, laborum neque voluptates unde minus animi
-                quisquam laudantium, officia quasi porro et optio consectetur
-                sunt voluptas laboriosam. Aliquam quo, praesentium explicabo vel
-                ipsam dignissimos nobis!
-              </td>
-            </tr>
-            <tr>
-              <td>Lorem ipsum dolor</td>
-              <td>Lorem ipsum dolor</td>
-              <td>
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ut
-                veritatis nihil cum, minus aspernatur dolor quas quidem autem,
-                sed commodi repudiandae. Suscipit fugit dignissimos rem at ipsa
-                repudiandae aspernatur voluptatibus earum. Aliquid nisi
-                doloremque quos, laborum neque voluptates unde minus animi
-                quisquam laudantium, officia quasi porro et optio consectetur
-                sunt voluptas laboriosam. Aliquam quo, praesentium explicabo vel
-                ipsam dignissimos nobis!
-              </td>
-            </tr>
-            <tr class="row">
-              <td>Lorem ipsum dolor</td>
-              <td>Lorem ipsum dolor</td>
-              <td>
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ut
-                veritatis nihil cum, minus aspernatur dolor quas quidem autem,
-                sed commodi repudiandae. Suscipit fugit dignissimos rem at ipsa
-                repudiandae aspernatur voluptatibus earum. Aliquid nisi
-                doloremque quos, laborum neque voluptates unde minus animi
-                quisquam laudantium, officia quasi porro et optio consectetur
-                sunt voluptas laboriosam. Aliquam quo, praesentium explicabo vel
-                ipsam dignissimos nobis!
-              </td>
-            </tr>
-          </tbody>
-        </table>
-
-        <!-- text under table -->
-
-      </section>
-      <p>
-        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Illo
-        voluptatum
-        <span class="text-yellow">
-          ab harum corrupti officia veniam suscipit fugit, adipisci blanditiis
-          dolorem quae
-        </span>
-        veritatis asperiores at distinctio consequuntur eos culpa vel commodi
-        eius id voluptates, facilis ea. Tempore earum doloribus, dolores
-        aspernatur quas eum recusandae dolorum eligendi laboriosam iure esse
-        nobis magni ullam enim? Vitae soluta unde quibusdam, maxime omnis
-        reprehenderit architecto!
-      </p>
     </main>
 
     <!-- related articles -->
@@ -163,6 +170,8 @@
         <h3 class="text-white">Lorem ipsum dolor</h3>
         <img src="img/graph.jpg" alt="Graph" />
       </div>
+  </article>
     </footer>
+  
   </body>
 </html>
