--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     <!-- header -->
 
-    <header>
+    <header class="top-header">
       <div class="top">
         <img src="img/logo.svg" alt="The Booleaner" id="logo" />
       </div>
@@ -32,12 +32,16 @@
           Internet deve essere al servizio del "bene pubblico": il manifesto di
           Tim Berners-Lee"
         </h1>
+
         <address class="text-gray">
           Scritto da
           <span class="text-lightblue">The Booleaner</span>
         </address>
-        <time class="text-gray">il 10/10/2020</time>
 
+        <div class="time">
+        <time class="text-gray" id="time">il 10/10/2020</time>
+        </div>
+        
         <!-- images -->
 
         <figure>
