--- a/index.html
+++ b/index.html
@@ -41,10 +41,10 @@
         <div class="time">
         <time class="text-gray" id="time">il 10/10/2020</time>
         </div>
-        
+
         <!-- images -->
 
-        <figure>
+        <figure class="tim">
         <img src="img/tim-1.jpg" alt="Tim Berners-Lee" />
         <img src="img/tim-2.jpg" alt="Tim Berners-Lee" />
           <figcaption>
