--- a/index.html
+++ b/index.html
@@ -165,6 +165,7 @@
     <!-- related articles -->
 
     <footer>
+      <aside>
       <h3>Potrebbero interessarti</h3>
       <div class="articolo1">
         <h3 class="text-white">Lorem ipsum dolor</h3>
@@ -175,6 +176,7 @@
         <img src="img/graph.jpg" alt="Graph" />
       </div>
   </article>
+</aside>
     </footer>
   
   </body>
